--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     grid-template-rows: 5rem auto 5rem;
     max-width: auto;
     margin: auto;
-    background-image: url(images/b4.jpg);
+    background-image: url(img/b4.jpg);
 }
 
 header {
