--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ canvas {
     width: 100%;
     align-items: center;
     padding: 20px;
+    
 }
 
 #playerone {
@@ -102,9 +103,11 @@ canvas {
 }
 
 #player1 {
-    background-color: #ef4444;
+    /* background-color: #ef4444; */
     height: 30px;
     width: 100%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 #playerHealth {
@@ -114,6 +117,8 @@ canvas {
     right: 0;
     bottom: 0;
     width: 100%;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
 }
 
 #timer {
@@ -135,9 +140,11 @@ canvas {
 }
 
 #player2 {
-    background-color: #ef4444;
+    /* background-color: #ef4444; */
     height: 30px;
     width: 100%;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 #enemyHealth {
@@ -147,6 +154,8 @@ canvas {
     right: 0;
     bottom: 0;
     left: 0;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 #displayText {
@@ -163,3 +172,7 @@ canvas {
     font-family: 'Press Start 2P';
     font-size: 4rem;
 }
+
+ #btnaudio {
+    display: none;
+ }
