--- a/style.css
+++ b/style.css
@@ -90,21 +90,24 @@ canvas {
     display: flex;
     width: 100%;
     align-items: center;
+    justify-content: end;
     padding: 20px;
-    
+
 }
 
 #playerone {
     position: relative;
-    height: 30px;
+    height: 75px;
     width: 100%;
     display: flex;
     justify-content: flex-end;
 }
 
 #player1 {
+    display: flex;
+    align-content: flex-end;
     /* background-color: #ef4444; */
-    height: 30px;
+    height: 75px;
     width: 100%;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -112,36 +115,46 @@ canvas {
 
 #playerHealth {
     position: absolute;
-    background-color: #0f766e;
+    /* background-color: #0f766e; */
+    background-image: url('/img/h-healthbar.png');
+    background-size:369px;
+    background-position: right;
+    /* background-size:contain; */
+    height: 75px;
+    background-repeat: no-repeat; 
     top: 0;
     right: 0;
     bottom: 0;
-    width: 100%;
+    width: 369px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
 }
 
 #timer {
-    background-color: rgb(31, 17, 17);
+    /* background-color: rgb(31, 17, 17); */
     color: whitesmoke;
-    height: 30px;
+    height: 75px;
     width: 150px;
     flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: 'Press Start 2P';
+    font-size: 3rem;
+    text-shadow: 0px 2px black;
 }
 
 #playertwo {
     position: relative;
-    height: 30px;
+    height: 75px;
     width: 100%;
+
+    /* width: 6000px; */
 }
 
 #player2 {
     /* background-color: #ef4444; */
-    height: 30px;
+    height: 75px;
     width: 100%;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -149,7 +162,11 @@ canvas {
 
 #enemyHealth {
     position: absolute;
-    background-color: #0369a1;
+    /* background-color: #0369a1; */
+    background-image: url('/img/healthbar.png');
+    background-size:369px;
+    height: 75px;
+    background-repeat: no-repeat;
     top: 0;
     right: 0;
     bottom: 0;
@@ -173,6 +190,6 @@ canvas {
     font-size: 4rem;
 }
 
- #btnaudio {
+#btnaudio {
     display: none;
- }
+}
