--- a/style.css
+++ b/style.css
@@ -38,13 +38,15 @@
     grid-template-rows: 5rem auto 5rem;
     max-width: auto;
     margin: auto;
-    background-image: url(img/b4.jpg);
+    background-image: url('img/b4.jpg');
+    background-size: contain;
 }
 
 header {
     grid-row: 1 / 2;
     display: flex;
     justify-content: space-around;
+    /* background-color: rgb(230, 68, 21); */
     background-color: rgb(44, 91, 156);
 }
 
@@ -60,6 +62,7 @@ main {
 footer {
     grid-row: 3 / 4;
     background-color: rgb(44, 91, 156);
+    /* background-color: rgb(230, 68, 21); */
     color: whitesmoke;
 }
 
@@ -68,21 +71,25 @@ a {
     text-decoration: none;
     color: whitesmoke;
     margin: 1rem .75rem;
-    font: 1rem 'Ubuntu700', sans-serif;
+    font: 1rem 'Press Start 2P', sans-serif;
+    text-shadow: 0px 2px black;
 }
 
 h1 {
     display: flex;
     justify-content: space-around;
-    align-self: center;
+    align-items: center;
     /* width: 300px; */
     height: 75px;
     color: whitesmoke;
-    font: 3.5rem 'Ubuntu700', sans-serif;
+    font: 2.5rem 'Press Start 2P', sans-serif;
+    text-shadow: 0px 2px black;
 }
 
 canvas {
-    background-color: whitesmoke;
+    /* background-color: gray; */
+    background-image: url('img/background.png');
+    border: 2px whitesmoke solid;
 }
 
 #posHP {
@@ -116,7 +123,7 @@ canvas {
 #playerHealth {
     position: absolute;
     /* background-color: #0f766e; */
-    background-image: url('/img/h-healthbar.png');
+    background-image: url('img/h-healthbar.png');
     background-size:369px;
     background-position: right;
     /* background-size:contain; */
@@ -128,6 +135,7 @@ canvas {
     width: 369px;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
+    display: none;
 }
 
 #timer {
@@ -163,7 +171,7 @@ canvas {
 #enemyHealth {
     position: absolute;
     /* background-color: #0369a1; */
-    background-image: url('/img/healthbar.png');
+    background-image: url('img/healthbar.png');
     background-size:369px;
     height: 75px;
     background-repeat: no-repeat;
@@ -173,6 +181,7 @@ canvas {
     left: 0;
     border-top-right-radius: 8px;
     border-bottom-right-radius: 8px;
+    display: none;
 }
 
 #displayText {
@@ -188,8 +197,24 @@ canvas {
     color: whitesmoke;
     font-family: 'Press Start 2P';
     font-size: 4rem;
+    text-shadow: 0px 2px black;
 }
 
-#btnaudio {
-    display: none;
+button {
+    position: absolute;
+    top:288px;
+    right:412px;
+    width: 200px;
+    height: 100px;
+    background-color: rgb(44, 91, 156);
+    /* background-color: transparent; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: whitesmoke;
+    font-family: 'Press Start 2P';
+    font-size: 2rem;
+    margin: 0.5rem;
+    text-shadow: 0px 2px black;
 }
+
