--- a/style.css
+++ b/style.css
@@ -208,6 +208,7 @@ button {
     height: 100px;
     background-color: rgb(44, 91, 156);
     /* background-color: transparent; */
+    opacity: 0.8;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -216,5 +217,9 @@ button {
     font-size: 2rem;
     margin: 0.5rem;
     text-shadow: 0px 2px black;
+}
+
+button:hover {
+    opacity: 1;
 }
 
